<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activity.LogActivity"
    android:orientation="vertical"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

    <TextView
        android:text="@string/log_in_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:layout_marginBottom="30sp"/>


    <EditText
        android:id="@+id/login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:inputType="phone"
        android:hint="@string/number_phone"
        />


    <EditText
        android:id="@+id/mdp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:enabled="false"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in_button"
        android:text="@string/ok"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="20sp"
        android:enabled="false"
        android:onClick="askConnection"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/log_in_sign_in"
        android:onClick="toConnect"
        />

    <TextView
        android:id="@+id/forgotten"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/lost_passwd"
        android:layout_gravity="bottom|center"
        android:textStyle="italic"
        android:textColor="#FFCCCCCC"
        android:layout_marginTop="15sp"
        android:textSize="10sp"
        android:onClick="sendForgottenPassword"
        />

    </LinearLayout>


</LinearLayout>
