<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
           />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_name"
                android:id="@+id/excursion_name"/>


            <CheckBox
                android:id="@+id/privateCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_excursion_private"/>


            <TextView
                android:id="@+id/activitytype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="35sp"
                android:paddingBottom="20sp"
                android:text="@string/create_excursion_type_sortie"
                android:textSize="28sp"
                android:textColor="@color/black"
                />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25sp">

                <RadioButton android:id="@+id/pedestrial_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pedestrial"
                    android:onClick="selectPedestrialExcursion"
                    />

                <RadioButton android:id="@+id/running_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Running"
                    android:onClick="selectRunningExcursion"
                    />

                <RadioButton android:id="@+id/car_way"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Car"
                    android:onClick="selectCarExcursion"
                    />

            </RadioGroup>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:onClick="startNewExcursion"
                android:layout_weight="0"/>


        </LinearLayout>






    </LinearLayout>



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left">

        <include layout="@layout/left_drawer_menu"/>

    </FrameLayout>

</android.support.v4.widget.DrawerLayout>